@startuml
'https://plantuml.com/class-diagram


class HeroAircraft {
    - int shootNum
    - int power
    - int direction
    - int maxShootMun
    - int maxHeroHp
    - {static} instance
    + HeroAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + {static} getInstance():HeroAircraft
    + {static} HeroAircraft getInstance(int locationX, int locationY, int speedX, int speedY, int hp):HeroAircraft
    + getShootNum():int
    + getMaxShootNum():int
    + forward():void
    + shoot():List<BaseBullet>
    + setShootNum(int num):void
    + resetShootNum():void
    + setHeroHp():void
    + decreaseShootNum():void
}

abstract class Game

HeroAircraft <-- HeroAircraft
Game ..> HeroAircraft
@enduml